--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 on: push
-name: Deploy website on push to ALL-INKL FTP
+name: Deploy to ALL-INKL
 jobs:
   web-deploy:
-    name: ALL-INKL Deploy
+    name: deployment
     runs-on: ubuntu-latest
     steps:
     - name: 🚚 Get latest code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
@@ -14,4 +14,6 @@ jobs:
         server: ${{ secrets.ALL_INKL_FTP_SERVER }}
         username: ${{ secrets.ALL_INKL_FTP_USERNAME }}
         password: ${{ secrets.ALL_INKL_FTP_PASSWORD }}
-        server-dir: /github-test/
+        server-dir: /linktr.jersyfi.de/
+        exclude: |
+          **/README.de*
