--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "linktree",
-  "version": "2.0.0",
+  "version": "2.0.4",
   "private": true,
   "scripts": {
     "old-dev": "next dev",
     "old-build": "next build",
-    "dev": "concurrently \"next dev --turbo\" \"tailwindcss -i styles/globals.css -o styles/dist.css -w\"",
-    "build": "tailwindcss -m -i styles/globals.css -o styles/dist.css && next build",
+    "dev": "concurrently \"next dev --turbo\" \"tailwindcss -i src/styles/globals.css -o src/styles/dist.css -w\"",
+    "build": "tailwindcss -m -i src/styles/globals.css -o src/styles/dist.css && next build",
     "start": "next start",
     "lint": "next lint"
   },
