--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -33,13 +33,9 @@ jobs:
       - name: Install ESLint
         run: |
           npm install eslint@8.10.0
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
 
       - name: Run ESLint
-        run: npm run lint .
-          --ext .js,.jsx,.ts,.tsx
-          --format @microsoft/eslint-formatter-sarif
-          --output-file eslint-results.sarif
+        run: npm run lint
         continue-on-error: true
 
       - name: Upload analysis results to GitHub
