--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linktree",
-  "version": "2.1.4",
+  "version": "2.3.5",
   "private": true,
   "scripts": {
     "dev": "concurrently \"next dev --turbo\" \"tailwindcss -i src/styles/globals.css -o src/styles/dist.css -w\"",
@@ -13,6 +13,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@vercel/analytics": "^0.1.7",
     "next": "13.1.1",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
@@ -23,6 +24,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
     "tailwindcss": "^3.2.4"
   }
 }
