--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.1.6",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
+    "react-cookify": "^2.1.4",
     "react-dom": "18.2.0",
     "sharp": "^0.31.3",
     "typescript": "4.9.5"
